css/style.css
body {
  font-family: Arial, sans-serif;
  max-width: 400px;
  margin: 20px auto;
  padding: 10px;
}
label {
  display: block;
  margin-top: 15px;
}
input, select, textarea {
  width: 100%;
  padding: 8px;
  margin-top: 5px;
  box-sizing: border-box;
}
button {
  margin-top: 20px;
  padding: 10px;
  width: 100%;
  background: #007bff;
  color: white;
  border: none;
  font-size: 16px;
  cursor: pointer;
}
button:disabled {
  background: #aaa;
  cursor: not-allowed;
}
.message {
  margin-top: 15px;
  font-weight: bold;
}
#amount {
  font-size: 16px;
}
#exportToExcelBtn {
  background-color: #217346; /* Excel green */
  color: white;
}

#version-label {
      position: fixed;
      bottom: 0;
      left: 50%;
      transform: translateX(-50%);
      padding: 5px 10px;
      background-color: #f0f0f0;
      font-size: 14px;
      color: #333;
      border-top: 1px solid #ccc;
      width: 100%;
      text-align: center;
      font-family: Arial, sans-serif;
}

